Fix the demo's link to the GitHub repo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			MaterialZ
 		</header>
 		<p>
-			<a href="https://github.com/zmyaro/materalz" target="_blank">MaterialZ</a> is a CSS library created by <a href="http://zmyaro.com" target="_blank">Zachary Yaro</a> that implements the <a href="http://www.google.com/design/spec/material-design/introduction.html" target="_blank">Material Design spec</a>.  Simply adding the stylesheets will instantly Material-theme any site.  With a few tweaks, the site can also add other UI widgets, such as app bars, lists, and cards.
+			<a href="https://github.com/zmyaro/materialz" target="_blank">MaterialZ</a> is a CSS library created by <a href="http://zmyaro.com" target="_blank">Zachary Yaro</a> that implements the <a href="http://www.google.com/design/spec/material-design/introduction.html" target="_blank">Material Design spec</a>.  Simply adding the stylesheets will instantly Material-theme any site.  With a few tweaks, the site can also add other UI widgets, such as app bars, lists, and cards.
 		</p>
 		<p>
 			Below is a demo of elements themed using the MaterialZ library.
