--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
-		<link rel="shortcut icon" sizes="128x128" href="icon_128.png" />
-		<link rel="apple-touch-icon-precomposed" sizes="128x128" href="icon_128.png" />
+		<link rel="shortcut icon" type="image/x-icon" href="icon/favicon.ico" />
+		<link rel="icon" sizes="192x192" href="icon/icon_192.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="192x192" href="icon/icon_192.png" />
 	</head>
 	<body>
 		<header class="appBar">
