Separate .toolbar from .appBar and improve demo

--- a/index.html
+++ b/index.html
@@ -18,9 +18,15 @@
 		<link rel="apple-touch-icon-precomposed" sizes="192x192" href="icon/icon_192.png" />
 	</head>
 	<body>
-		<header class="appBar">
-			<button style="float: right;" title=".appBar > button">
-				<img src="icon.png" alt="Icon" />
+		<header class="appBar toolbar">
+			<button style="float: right;" title=".toolbar > button">
+				<img src="demo_icons/appbar3.png" alt="Icon" />
+			</button>
+			<button style="float: right;" title=".toolbar > button">
+				<img src="demo_icons/appbar2.png" alt="Icon" />
+			</button>
+			<button style="float: right;" title=".toolbar > button">
+				<img src="demo_icons/appbar1.png" alt="Icon" />
 			</button>
 			MaterialZ
 		</header>
@@ -63,6 +69,43 @@
 			<li><button style="width: 100%; width: calc(100% + 32px);">.list > li > button</button></li>
 			<li><button style="width: 100%; width: calc(100% + 32px);">.list > li > button</button></li>
 		</ul>
+		<br />
+		<div class="toolbar">
+			.toolbar
+			<button title=".toolbar > button">
+				<img src="demo_icons/toolbar1.png" alt="Icon" />
+			</button>
+			<button title=".toolbar > button">
+				<img src="demo_icons/toolbar2.png" alt="Icon" />
+			</button>
+			<button title=".toolbar > button">
+				<img src="demo_icons/toolbar3.png" alt="Icon" />
+			</button>
+			<button title=".toolbar > button">
+				<img src="demo_icons/toolbar4.png" alt="Icon" />
+			</button>
+		</div>
+		<br />
+		<div class="card z1" style="width: 256px;">
+			.card z1
+		</div>
+		<br />
+		<div class="card z2" style="width: 256px;">
+			.card z2
+		</div>
+		<br />
+		<div class="card z3" style="width: 256px;">
+			.card z3
+		</div>
+		<br />
+		<div class="card z4" style="width: 256px;">
+			.card z4
+		</div>
+		<br />
+		<div class="card z5" style="width: 256px;">
+			.card z5
+		</div>
+		<br />
 	</body>
 </html>
 
