Mention limited support for checkboxes and radio buttons on the demo page

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 		</section>
 		<section class="card z1">
 			<h1>Radio buttons</h1>
-			<p>An <code>&lt;input type="radio" /&gt;</code> will be styled and animated as a paper radio button.</p>
+			<p>An <code>&lt;input type="radio" /&gt;</code> will be styled and animated as a paper radio button.  (Note this is only fully supported in WebKit- and Blink-based browsers, such as Chrome and Safari.)</p>
 			<div class="col">
 				<input type="radio" name="radioset1" />
 				<input type="radio" name="radioset1" checked="checked" />
@@ -162,7 +162,7 @@
 		</section>
 		<section class="card z1">
 			<h1>Checkboxes</h1>
-			<p>An <code>&lt;input type="checkbox" /&gt;</code> will be styled and animated as a paper checkbox.</p>
+			<p>An <code>&lt;input type="checkbox" /&gt;</code> will be styled and animated as a paper checkbox.  (Note this is only fully supported in WebKit- and Blink-based browsers, such as Chrome and Safari.)</p>
 			<div class="col">
 				<input type="checkbox" />
 				<input type="checkbox" checked="checked" />
