Tweak flat button description on the demo page

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 		</section>
 		<section class="card z1">
 			<h1>Buttons</h1>
-			<p>Any <code>&lt;button&gt;</code> element, any <code>&lt;input&gt;</code> with <code>type</code> set to <code>button</code>, <code>submit</code>, or <code>reset</code>, or any other element with <code>role="button"</code> will automatically be styled as an edgeless paper button.  Adding a depth class will turn it into a raised button (see <a href="#depth">Depth</a> below).</p>
+			<p>Any <code>&lt;button&gt;</code> element, any <code>&lt;input&gt;</code> with <code>type</code> set to <code>button</code>, <code>submit</code>, or <code>reset</code>, or any other element with <code>role="button"</code> will automatically be styled as a flat paper button.  Adding a depth class will turn it into a raised button (see <a href="#depth">Depth</a> below).</p>
 			<div class="col">
 				<button>Button</button>
 				<button class="z1">Raised button</button>
