Add theme color for mobile Chrome

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+		<meta name="theme-color" content="#263238" />
 		
 		<link rel="shortcut icon" type="image/x-icon" href="icon/favicon.ico" />
 		<link rel="icon" sizes="192x192" href="icon/icon_192.png" />
