Implement appcache to make the demo site available offline

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="cache.manifest">
 	<head>
 		<title>MaterialZ</title>
 		
@@ -17,6 +17,8 @@
 		<link rel="stylesheet" type="text/css" href="material-elements.css" />
 		<link rel="stylesheet" type="text/css" href="material-widgets.css" />
 		<link rel="stylesheet" type="text/css" href="material-depth.css" />
+		
+		<link rel="stylesheet" type="text/css" href="demo_fonts/roboto.css" />
 		
 		<style type="text/css">
 			body {
