--- a/index.html
+++ b/index.html
@@ -364,6 +364,18 @@
 				&lt;div class="card z1" style="width: 192px; height: 192px;"&gt;&lt;/div&gt;
 			</code>
 		</section>
+		<section class="card z1">
+			<h1>Circular progress indicators</h1>
+			<p>A progress (or <code>role="progress"</code>) element with the <code>circular</code> class will be styled as a circular progress indicator. Change the <code>border-top-color</code> to change the color of the spinner.</p>
+			<div class="col">
+				<progress class="circular"></progress>
+				<progress class="circular" style="border-top-color: #2196f3;"></progress>
+			</div>
+			<code class="col">
+				&lt;progress class="circular"&gt;&lt;/progress&gt;
+				&lt;progress class="circular" style="border-top-color: #2196f3;"&gt;&lt;/progress&gt;
+			</code>
+		</section>
 		
 		<br />
 		<h1 id="depth">Depth</h1>
