Update demo toolbar icons

--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
 	<body>
 		<header role="toolbar" class="appBar z2">
 			<button style="float: right;" title="Button 3">
-				<img src="demo_icons/appbar3.png" alt="Icon 3" />
+				<img src="demo_icons/appbar3.svg" alt="Button 3" />
 			</button>
 			<button style="float: right;" title="Button 2">
-				<img src="demo_icons/appbar2.png" alt="Icon 2" />
+				<img src="demo_icons/appbar2.png" alt="Button 2" />
 			</button>
 			<button style="float: right;" title="Button 1">
-				<img src="demo_icons/appbar1.png" alt="Icon 1" />
+				<img src="demo_icons/appbar1.png" alt="Button 1" />
 			</button>
 			MaterialZ
 		</header>
@@ -273,20 +273,17 @@
 		</section>
 		<section class="card z1">
 			<h1>Toolbars</h1>
-			<p>An element with <code>role="toolbar"</code> will have its buttons styled as paper toolbar buttons.</p>
+			<p>An element with <code>role="toolbar"</code> will have its buttons styled as paper toolbar buttons.  Icons will be resized to 24px, so SVGs and 2x PNGs may be used.</p>
 			<div class="col">
 				<div role="toolbar">
 					<button title="Button 1">
-						<img src="demo_icons/toolbar1.png" alt="Icon 1" />
+						<img src="demo_icons/toolbar1.png" alt="Button 1" />
 					</button>
 					<button title="Button 2">
-						<img src="demo_icons/toolbar2.png" alt="Icon 2" />
+						<img src="demo_icons/toolbar2.png" alt="Button 2" />
 					</button>
 					<button title="Button 3">
-						<img src="demo_icons/toolbar3.png" alt="Icon 3" />
-					</button>
-					<button title="Button 4">
-						<img src="demo_icons/toolbar4.png" alt="Icon 4" />
+						<img src="demo_icons/toolbar3.svg" alt="Button 3" />
 					</button>
 				</div>
 			</div>
@@ -307,13 +304,7 @@
 				<br />
 				&nbsp;&nbsp;&nbsp;&nbsp;&lt;button title="Button 3"&gt;
 				<br />
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;img src="icon3.png" alt="Icon 3" /&gt;
-				<br />
-				&nbsp;&nbsp;&nbsp;&nbsp;&lt;/button&gt;
-				<br />
-				&nbsp;&nbsp;&nbsp;&nbsp;&lt;button title="Button 4"&gt;
-				<br />
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;img src="icon4.png" alt="Icon 4" /&gt;
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;img src="icon3.svg" alt="Icon 3" /&gt;
 				<br />
 				&nbsp;&nbsp;&nbsp;&nbsp;&lt;/button&gt;
 				<br />
@@ -331,7 +322,7 @@
 				<br />
 				&nbsp;&nbsp;&nbsp;&nbsp;&lt;button style="float: right;" title="Button 3"&gt;
 				<br />
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;img src="icon3.png" alt="Icon 3" /&gt;
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;img src="icon3.svg" alt="Icon 3" /&gt;
 				<br />
 				&nbsp;&nbsp;&nbsp;&nbsp;&lt;/button&gt;
 				<br />
